--- a/src/Components/ProductList Component/style.module.css
+++ b/src/Components/ProductList Component/style.module.css
@@ -1,7 +1,7 @@
 .pList { 
     width: 95%;
     height: auto;
-    background-color: #e9e9e9;
+    background-color: #edeaf1;
     display: flex;
     flex-direction: column;
     justify-content: center;
