--- a/src/Components/App Component/style.module.css
+++ b/src/Components/App Component/style.module.css
@@ -1,10 +1,4 @@
-/* .app { 
-    width: 95%;
-    height: auto;
-    background-color: #bdbdbd;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
-} */
+.app { 
+background-color: #edeaf1;
+}
