--- a/src/Components/Products Component/style.module.css
+++ b/src/Components/Products Component/style.module.css
@@ -1,21 +1,40 @@
 .product { 
     width: 95%;
     height: 55px;
-    background-color: #f5f5f5;
-    border: solid 2px #9e9e9e;
+    background-color: #ffffff;
+    /* border: solid 2px #733DD8; */
     color: #263238;
     display: flex;
     border-radius: 12px;
     margin: 12px 0;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 8px;
 }
 
+
+
+.detail { 
+    display: flex;
+    min-width: 50%;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+}
+
+/* .input { 
+    padding: 5px;
+    border: solid 2px #733DD8;
+    border-radius: 12px;
+
+} */
+
 .qty { 
-    background-color: rgb(235, 150, 235); 
+    background-color: #733DD8; 
     padding: 4px; 
     border-radius: 50%;
+    color: white;
 }
 
 .btn { 
@@ -23,19 +42,28 @@
     border: none;
     cursor: pointer;
     background-color: #f5f5f5;
-    color: rgb(245, 164, 245);
-    border : solid 2px rgb(197 65 197) ;
+    color : #733DD8 ;
+    border : solid 1px #733DD8 ;
     padding: 8px;
 }
 
 .btnRemove { 
-    border : solid 3px rgb(197 65 197) ; 
+    border : solid 1px #ff0707 ; 
     /* background-color: blue; */
-    color: rgb(129, 129, 55);
+    color: #ff0707;
+border-radius: 10px;
 }
-.input { 
-    padding: 5px;
-    border: solid 2px rgb(197 65 197);
-    border-radius: 12px;
 
+.btnContainer { 
+    display: flex;
+    min-width: 19%;
+    justify-content: space-around;
+}
+.deleteBtn { 
+    color: #ff0707;
+    border: none;
+    font-size: 22px;
+    font-weight: 700;
+    cursor: pointer;
+    background: none;
 }
