--- a/src/Components/filterComponent/style.module.css
+++ b/src/Components/filterComponent/style.module.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     /* align-content: flex-start; */
     align-items: flex-start;
-
+    margin: 10px 8px ;
+    
 }
 
 
