--- a/src/Components/Products Component/style.module.css
+++ b/src/Components/Products Component/style.module.css
@@ -19,7 +19,7 @@
     display: flex;
     min-width: 50%;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: row;
 }
 
